--- a/config.yaml
+++ b/config.yaml
@@ -22,3 +22,7 @@ mysql:
   max-open-conns: 0
   log-mode: ""
   log-zap: false
+jwt:
+  signing-key: tokyohot
+  expires-time: 60
+  buffer-time: 100
